log/build_2024-04-22_18-05-03/uav_urdf_demo/stdout_stderr.log
[35m[1mScanning dependencies of target command_publisher[0m
[ 50%] Built target state_publisher
[ 75%] [32mBuilding CXX object CMakeFiles/command_publisher.dir/src/command_publisher.cpp.o[0m
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:60:38: error: ‘Int64’ is not a member of ‘std_msgs::msg’
   60 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                      ^~~~~
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:60:43: error: template argument 1 is invalid
   60 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                           ^
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:60:46: error: expected ‘;’ at end of member declaration
   60 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                              ^~~~~~~~~
      |                                                       ;
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:60:56: error: ‘publisher’ does not name a type
   60 |     rclcpp::Publisher<std_msgs::msg::Int64>::SharedPtr publisher;
      |                                                        ^~~~~~~~~
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:62:2: error: expected ‘;’ after class definition
   62 | }
      |  ^
      |  ;
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp: In constructor ‘CommandPublisher::CommandPublisher()’:
/home/ccl/ROS2_UAV/uav_urdf_demo/src/command_publisher.cpp:10:9: error: ‘publisher’ was not declared in this scope
   10 |         publisher = this->create_publisher<std_msgs::msg::Int16>("/cmd_direction", 10);
      |         ^~~~~~~~~
make[2]: *** [CMakeFiles/command_publisher.dir/build.make:63: CMakeFiles/command_publisher.dir/src/command_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/command_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
